--- a/src/index.css
+++ b/src/index.css
@@ -13,11 +13,39 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* Стилизация скроллбара для WebKit-браузеров (Chrome, Safari) */
+:root::-webkit-scrollbar {
+  width: 10px;
+}
+
+:root::-webkit-scrollbar-thumb {
+  background-color: #00bfff;
+  border-radius: 10px;
+  border: 2px solid transparent;
+  background-clip: padding-box;
+}
+
+:root::-webkit-scrollbar-thumb:hover {
+  background-color: #00aaff;
+}
+
+:root::-webkit-scrollbar-track {
+  background-color: #1a1a1a;
+}
+
+/* Стилизация скроллбара для Firefox */
+:root {
+  scrollbar-width: thin;
+  scrollbar-color: #00bfff #1a1a1a;
+}
+
+
 a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -26,6 +54,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -46,9 +75,11 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -59,9 +90,11 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
