--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -2,6 +2,14 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 2 rem;
+    justify-content: space-around;
+    gap: 1rem;
+    padding: 1rem;
+}
+
+.card {
+    border: 'none';
+    background: 'none';
+    padding: 0;
+    text-align: 'left';
 }
