--- a/src/index.css
+++ b/src/index.css
@@ -82,7 +82,12 @@ button:hover {
 
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline: none;
+}
+
+button:active {
+  outline: none;
+  border-color: #646cff;
 }
 
 @media (prefers-color-scheme: light) {
